v0.0.1/modules/schema/pages/class/MutualCoupling.adoc
= `MutualCoupling`
:toclevels: 4


+++This class represents the zero sequence line mutual coupling.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:MutualCoupling`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`MutualCoupling`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
MutualCoupling {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



















Terminal {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Terminal {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}












MutualCoupling -> Terminal: First_Terminal


MutualCoupling -> Terminal: Second_Terminal


MutualCoupling -> DiagramObject: DiagramObjects


MutualCoupling -> InstanceSet: InstanceSet


MutualCoupling -> Name: Names


MutualCoupling -> ChangeSetMember: PropertiesCIMDataObject


MutualCoupling -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<First_Terminal,`First_Terminal`>>
| 1
| xref::class/Terminal.adoc[`Terminal`]
| +++The starting terminal for the calculation of distances along the first branch of the mutual coupling.  Normally MutualCoupling would only be used for terminals of AC line segments.  The first and second terminals of a mutual coupling should point to different AC line segments.+++

| <<Second_Terminal,`Second_Terminal`>>
| 1
| xref::class/Terminal.adoc[`Terminal`]
| +++The starting terminal for the calculation of distances along the second branch of the mutual coupling.+++

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<b0ch,`b0ch`>>
| 0..1
| xref::class/Susceptance.adoc[`Susceptance`]
| +++Zero sequence mutual coupling shunt (charging) susceptance, uniformly distributed, of the entire line section.+++

| <<distance11,`distance11`>>
| 0..1
| xref::class/Length.adoc[`Length`]
| +++Distance to the start of the coupled region from the first line's terminal having sequence number equal to 1.+++

| <<distance12,`distance12`>>
| 0..1
| xref::class/Length.adoc[`Length`]
| +++Distance to the end of the coupled region from the first line's terminal with sequence number equal to 1.+++

| <<distance21,`distance21`>>
| 0..1
| xref::class/Length.adoc[`Length`]
| +++Distance to the start of coupled region from the second line's terminal with sequence number equal to 1.+++

| <<distance22,`distance22`>>
| 0..1
| xref::class/Length.adoc[`Length`]
| +++Distance to the end of coupled region from the second line's terminal with sequence number equal to 1.+++

| <<g0ch,`g0ch`>>
| 0..1
| xref::class/Conductance.adoc[`Conductance`]
| +++Zero sequence mutual coupling shunt (charging) conductance, uniformly distributed, of the entire line section.+++

| <<r0,`r0`>>
| 0..1
| xref::class/Resistance.adoc[`Resistance`]
| +++Zero sequence branch-to-branch mutual impedance coupling, resistance.+++

| <<x0,`x0`>>
| 0..1
| xref::class/Reactance.adoc[`Reactance`]
| +++Zero sequence branch-to-branch mutual impedance coupling, reactance.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#b0ch]
=== `b0ch`
+++Zero sequence mutual coupling shunt (charging) susceptance, uniformly distributed, of the entire line section.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MutualCoupling.b0ch`
| Cardinality
| 0..1
| Type
| xref::class/Susceptance.adoc[`Susceptance`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#distance11]
=== `distance11`
+++Distance to the start of the coupled region from the first line's terminal having sequence number equal to 1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MutualCoupling.distance11`
| Cardinality
| 0..1
| Type
| xref::class/Length.adoc[`Length`]


|===

//[discrete]
[#distance12]
=== `distance12`
+++Distance to the end of the coupled region from the first line's terminal with sequence number equal to 1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MutualCoupling.distance12`
| Cardinality
| 0..1
| Type
| xref::class/Length.adoc[`Length`]


|===

//[discrete]
[#distance21]
=== `distance21`
+++Distance to the start of coupled region from the second line's terminal with sequence number equal to 1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MutualCoupling.distance21`
| Cardinality
| 0..1
| Type
| xref::class/Length.adoc[`Length`]


|===

//[discrete]
[#distance22]
=== `distance22`
+++Distance to the end of coupled region from the second line's terminal with sequence number equal to 1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MutualCoupling.distance22`
| Cardinality
| 0..1
| Type
| xref::class/Length.adoc[`Length`]


|===

//[discrete]
[#First_Terminal]
=== `First_Terminal`
+++The starting terminal for the calculation of distances along the first branch of the mutual coupling.  Normally MutualCoupling would only be used for terminals of AC line segments.  The first and second terminals of a mutual coupling should point to different AC line segments.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MutualCoupling.First_Terminal`
| Cardinality
| 1
| Type
| xref::class/Terminal.adoc[`Terminal`]


|===

//[discrete]
[#g0ch]
=== `g0ch`
+++Zero sequence mutual coupling shunt (charging) conductance, uniformly distributed, of the entire line section.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MutualCoupling.g0ch`
| Cardinality
| 0..1
| Type
| xref::class/Conductance.adoc[`Conductance`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#r0]
=== `r0`
+++Zero sequence branch-to-branch mutual impedance coupling, resistance.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MutualCoupling.r0`
| Cardinality
| 0..1
| Type
| xref::class/Resistance.adoc[`Resistance`]


|===

//[discrete]
[#Second_Terminal]
=== `Second_Terminal`
+++The starting terminal for the calculation of distances along the second branch of the mutual coupling.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MutualCoupling.Second_Terminal`
| Cardinality
| 1
| Type
| xref::class/Terminal.adoc[`Terminal`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#x0]
=== `x0`
+++Zero sequence branch-to-branch mutual impedance coupling, reactance.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MutualCoupling.x0`
| Cardinality
| 0..1
| Type
| xref::class/Reactance.adoc[`Reactance`]


|===


